--- a/api-formspree/index.html
+++ b/api-formspree/index.html
@@ -17,25 +17,17 @@
       <h1 class="mt-3 text-center">Formulario de contacto</h1>
       <form action="">
         <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label"
-            >Asunto</label
-          >
+          <label for="subject" class="form-label">Asunto</label>
           <input
             type="text"
             class="form-control"
-            id="exampleFormControlInput1"
+            id="subject"
             placeholder="Asunto"
           />
         </div>
         <div class="mb-3">
-          <label for="exampleFormControlTextarea1" class="form-label"
-            >Mensaje</label
-          >
-          <textarea
-            class="form-control"
-            id="exampleFormControlTextarea1"
-            rows="3"
-          ></textarea>
+          <label for="message" class="form-label">Mensaje</label>
+          <textarea class="form-control" id="message" rows="3"></textarea>
         </div>
         <button type="button" class="btn btn-success">Enviar</button>
       </form>
