--- a/api-formspree/index.html
+++ b/api-formspree/index.html
@@ -29,7 +29,7 @@
           <label for="message" class="form-label">Mensaje</label>
           <textarea class="form-control" id="message" rows="3"></textarea>
         </div>
-        <button type="button" class="btn btn-success">Enviar</button>
+        <button type="submit" class="btn btn-success">Enviar</button>
       </form>
     </div>
     <script
