--- a/api-formspree/index.html
+++ b/api-formspree/index.html
@@ -15,7 +15,8 @@
   <body>
     <div class="container">
       <h1 class="mt-3 text-center">Formulario de contacto</h1>
-      <form action="">
+      <form id="form">
+        <!--Add action and method-->
         <div class="mb-3">
           <label for="subject" class="form-label">Asunto</label>
           <input
@@ -23,13 +24,19 @@
             class="form-control"
             id="subject"
             placeholder="Asunto"
+            name="subject"
           />
         </div>
         <div class="mb-3">
           <label for="message" class="form-label">Mensaje</label>
-          <textarea class="form-control" id="message" rows="3"></textarea>
+          <textarea
+            class="form-control"
+            id="message"
+            rows="3"
+            name="message"
+          ></textarea>
         </div>
-        <button type="button" class="btn btn-success">Enviar</button>
+        <button type="submit" class="btn btn-success">Enviar</button>
       </form>
     </div>
     <script
@@ -37,5 +44,6 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <script src="./sendEmail.js"></script>
   </body>
 </html>
