--- a/app-system/index.html
+++ b/app-system/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
       <h1 class="mt-3 text-center">Formulario de contacto</h1>
-      <form action="">
+      <form action="" id="form">
         <div class="mb-3">
           <label for="subject" class="form-label">Asunto</label>
           <input
@@ -23,19 +23,28 @@
             class="form-control"
             id="subject"
             placeholder="Asunto"
+            name="subject"
           />
         </div>
         <div class="mb-3">
           <label for="message" class="form-label">Mensaje</label>
-          <textarea class="form-control" id="message" rows="3"></textarea>
+          <textarea
+            class="form-control"
+            id="message"
+            rows="3"
+            name="message"
+          ></textarea>
         </div>
-        <button type="button" class="btn btn-success">Enviar</button>
+        <button type="submit" class="btn btn-success">Enviar</button>
       </form>
+      <a id="emailA"></a>
+      <!--Colocar este ancla-->
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <script src="./sendEmail.js"></script>
   </body>
 </html>
