--- a/node-server/public/index.html
+++ b/node-server/public/index.html
@@ -15,21 +15,27 @@
   <body>
     <div class="container">
       <h1 class="mt-3 text-center">Formulario de contacto</h1>
-      <form action="">
+      <form action="/" method="POST">
         <div class="mb-3">
           <label for="subject" class="form-label">Asunto</label>
           <input
             type="text"
             class="form-control"
+            name="subject"
             id="subject"
             placeholder="Asunto"
           />
         </div>
         <div class="mb-3">
           <label for="message" class="form-label">Mensaje</label>
-          <textarea class="form-control" id="message" rows="3"></textarea>
+          <textarea
+            class="form-control"
+            id="message"
+            rows="3"
+            name="message"
+          ></textarea>
         </div>
-        <button type="button" class="btn btn-success">Enviar</button>
+        <button type="submit" class="btn btn-success">Enviar</button>
       </form>
     </div>
     <script
