--- a/app-system/index.html
+++ b/app-system/index.html
@@ -23,11 +23,17 @@
             class="form-control"
             id="subject"
             placeholder="Asunto"
+            name="subject"
           />
         </div>
         <div class="mb-3">
           <label for="message" class="form-label">Mensaje</label>
-          <textarea class="form-control" id="message" rows="3"></textarea>
+          <textarea
+            class="form-control"
+            id="message"
+            rows="3"
+            name="message"
+          ></textarea>
         </div>
         <button type="submit" class="btn btn-success">Enviar</button>
       </form>
